# hey-cheryl

./: .dockerignore  .env  .envrc  .gitignore  README.md  app.py  dockerfile  hälsning.txt  install.sh  pyproject.toml
.github/workflows/: build-push.yml  deploy.yml
db/: schema.sql
deploy/: cheryl.service  hey-cheryl.service  install_cheryl_service.sh  nginx.conf
migrations/: 20250518131704_create_table_concepts.sql  20250518131708_create_table_messages.sql  20250518181644_create_table_sid_conversation_id.sql  20250525155138_create_tables.sql  20250608101345_add_column_approved_prompt.sql
src/: __init__.py  app.py  cheryl.py  models.py  provider.py
src/config/: config.py
src/models/: __init__.py  concept.py  conversation.py  message.py
src/repositories/: concepts.py  conversations.py  messages.py  system_prompts.py  users.py
src/retired/: cheryl.py
src/services/: __init__.py  assistant.py  cheryl.py  concepts.py  messages.py  users.py
static/: styles.css
templates/: about.html  chat.html  index.html  manage.html
