[project]
name = "hey-cheryl"
version = "0.1.0"
description = "Cheryl"
readme = "README.md"
requires-python = "~=3.12" # Allows 3.12.x versions
dependencies = [
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "gunicorn>=23.0.0",
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.6",
    "pydantic>=2.11.4",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
